# octo-bloom

./: .dockerignore  .env  CMakeCache.txt  CMakeLists.txt  Makefile  QUERY_EXAMPLES.md  README.md  RELEASE_NOTES.md  bloom.md  cmake_install.cmake  docker-compose.yml  octo_bloom.control
docker/: Dockerfile  README.md
docker/initdb.d/: 01-init-extension.sql
docker/pgadmin/: servers.json
sql/: octo_bloom--1.0.sql
src/: background_worker.cpp  bloom_filter.cpp  bloom_filter.hpp  octo_bloom.cpp  shared_memory.cpp  shared_memory.hpp  trigger_manager.cpp
